--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "date-fns": "^2.10.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-material-ui-form-validator": "^2.0.10",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.4.0"
   },
