--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "date-fns": "^2.10.0",
     "react": "^16.8.6",
+    "react-datepicker": "^2.14.0",
     "react-dom": "^16.8.6",
     "react-material-ui-form-validator": "^2.0.10",
     "react-router-dom": "^5.0.1",
