--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@material-ui/pickers": "^3.2.10",
     "axios": "^0.19.0",
     "date-fns": "^2.10.0",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-datepicker": "^2.14.0",
     "react-dom": "^16.8.6",
     "react-material-ui-form-validator": "^2.0.10",
+    "react-moment": "^0.9.7",
     "react-router-dom": "^5.0.1",
     "react-scripts": "^3.4.0"
   },
